styling.css
@import url("https://fonts.googleapis.com/css2?family=Poiret+One&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,600;1,300;1,500&display=swap");

* {
  margin: 0;
  padding: 0;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  background-color: #f8f4e3;
}

h1 {
  font-size: 36px;
  color: #0d1321;
  font-family: "Montserrat", sans-serif;
  text-align: left;
}

h2 {
  font-size: 70px;
  color: #ef626c;
  font-family: "Abril Fatface", cursive;
  text-align: left;
}

h3 {
  font-size: 28px;
  color: #0d1321;
  font-family: "Montserrat", sans-serif;
  text-align: left;
}

h5 {
  font-size: 36px;
  font-family: "Montserrat", sans-serif;
  text-align: left;
}

p {
  font-size: 15px;
  font-family: "Open Sans", sans-serif;
}

.demopara {
  line-height: 2;
  padding: 2rem 4rem;
}

.purple-slice {
  position: absolute;
  top: 0;
  width: 100%;
  height: 100%;
  background: purple;
  clip-path: polygon(0 0%, 100% 0%, 100% 100%, 0 23%);
  z-index: -1;
}
.nav {
  display: flex;
  list-style-type: disc;
  justify-content: flex-end;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 10;
  background-color: purple;
}

nav ul {
  list-style: none;
  float: right;
  display: flex;
  margin: 0;
  padding: 0;
}

nav ul li a {
  color: #f8f4e3;
  padding: 22px 30px;
  text-decoration: none;
  line-height: 70px;
  font-size: 22px;
  font-family: "Poiret One";
}

ul li a {
  font-size: 15px;
  font-family: "Open Sans", sans-serif;
  text-align: left;
}

.image-me {
  /* position: absolute; */
  right: 250px;
  top: 100px;
}

#skillandbio {
  display: grid;
  grid-template-columns: 1fr 1fr;
}

.welcome-section {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
}

#welcome {
  text-align: center;
  padding-top: 310px;
  padding-bottom: 200px;
  /* padding-left: 70px; */
  padding-right: 2rem;
}

/* Projects section */

.project-description > p {
  font-size: 12px;
}

.projects-section-header {
  font-family: "Open Sans";
  font-size: 30px;
  max-width: 640px;
  margin: 0 auto 6rem auto;
  border-bottom: 0.2rem solid var(#d05353);
  position: relative;
  left: 170px;
}

.projects-section {
  text-align: center;
  padding: 10rem 2rem;
}

.container {
  position: relative;
  height: 120%;
  width: 100%;
  overflow: hidden;
}

.container:hover .button {
  display: block;
  opacity: 1;
  color: white;
}

.button {
  transform: translateY(10%);
  position: absolute;
  width: 500px;
  left: 0;
  top: 180px;
  text-align: center;
  opacity: 0;
  transition: opacity 0.35s ease;
  display: none;
}
/* @media (max-width: 28.75em) {
  .projects-section-header {
    font-size: 4rem;
  }
} */

/* "Automagic" image grid using no media queries */
.projects-grid {
  display: grid;
  grid-template-areas:
    "item1 item2 item3"
    "item4 item5 .";
  grid-gap: 4rem;
  margin: 0 auto;
  margin-bottom: 6rem;
}

/* @media (min-width: 8000px) {
  .projects-section {
    padding: 6rem 1rem;
  }

  .projects-grid {
    grid-template-columns: 1fr;
  }
} */
#item1 {
  grid-area: item1;
}

#item2 {
  grid-area: item2;
}

#item3 {
  grid-area: item3;
}

#item4 {
  grid-area: item4;
}

#item5 {
  grid-area: item5;
}

.project {
  background: #ef626c;
  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
  border-radius: 2px;
}

.code {
  color: #260403;
  transition: color 0.3s ease-out;
}

.project:hover .code {
  color: #ff7f50;
}

.project-image {
  height: calc(100% - 6.8rem);
  width: 100%;
  object-fit: cover;
}

.project-description {
  font-size: 12px;
  padding: 2rem 0.5rem;
  background-color: black;
  z-index: ;
}

.svg {
  width: 82px;
  height: 86px;
  padding: 1rem;
  position: relative;
  left: 400px;
}

a,
a > span {
  position: relative;
  color: inherit;
  text-decoration: none;
  line-height: 24px;
}
a:before,
a:after,
a > span:before,
a > span:after {
  content: "";
  position: absolute;
  transition: transform 0.5s ease;
}
.effect2:before,
.effect2:after {
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  border-style: solid;
  border-color: #e63946;
}
.effect2:before {
  border-width: 2px 0 2px 0;
  transform: scaleX(0);
}
.effect2:after {
  border-width: 0 2px 0 2px;
  transform: scaleY(0);
}
.effect2:hover:before,
.effect2:hover:after {
  transform: scale(1, 1);
}

/* #Codepen */

.container {
  position: relative;
  margin-top: 50px;
  width: 500px;
  height: 300px;
}

.container project-description {
  font-size: 12px;
  padding: 2rem 0.5rem;
  width: 500px;
  margin-left: 0;
}

.overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0);
  transition: background 0.5s ease;
}

.container:hover .overlay {
  display: block;
  background: rgba(0, 0, 0, 0.3);
}
/* 
img {
  position: absolute;
  width: 500px;
  height: 300px;
  left: 0;
} */

.title {
  position: absolute;
  width: 500px;
  left: 0;
  top: 120px;
  font-weight: 700;
  font-size: 35px;
  text-align: center;
  text-transform: uppercase;
  color: white;
  z-index: 1;
  transition: top 0.5s ease;
}

.container:hover .title {
  top: 90px;
}

.button {
  position: absolute;
  width: 500px;
  left: 0;
  top: 180px;
  text-align: center;
  opacity: 0;
  transition: opacity 0.35s ease;
}

.button a {
  width: 200px;
  padding: 12px 48px;
  text-align: center;
  color: white;
  border: solid 2px white;
  z-index: 1;
}

.container:hover .button {
  opacity: 1;
}

